data/derived/comb/progs/unify/prog8476.ml.out
Characters 62-67:
  if b=b' then false
               ^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
